# pocket-prompt-ui

./: .env.example  NORTH_STAR.md  README.md  app-icon.png.backup  generate-icon.sh  index.html  package.json  release.sh
.github/workflows/: release-tauri.yml
config/: tailwind.config.js
scripts/: add-share-token.ts  setup-turso.ts  turso-schema.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/files/: pocket-prompt-local.desktop
src-tauri/files/usr/share/applications/: Pocket Prompt.desktop  pocket-prompt.desktop
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/backend/api/: directory-storage.ts  turso-queries.ts  turso.ts
src/core/identity/: device.ts
src/core/migration/: arweave-to-turso.ts
src/core/storage/: cache.ts
src/frontend/: App.tsx  index.css  main.tsx
src/frontend/components/migration/: MigrationDialog.tsx
src/frontend/components/prompts/: PromptCard.tsx  PromptDialog.tsx  PromptListItem.tsx  PublicPromptView.tsx  TursoSharedPromptView.tsx
src/frontend/components/search/: BooleanBuilder.tsx  SearchBar.tsx
src/frontend/components/shared/: MobileMenu.tsx  ThemeToggle.tsx  TitleBar.tsx  UploadDialog.tsx
src/frontend/components/sync/: SyncButton.tsx
src/frontend/components/ui/: dialog.tsx  dropdown-menu.tsx
src/frontend/components/waitlist/: ComingSoonButton.tsx  TeamsButton.tsx  TeamsWaitlistModal.tsx
src/frontend/hooks/: useIdentity.ts  usePrompts.ts  useSyncMode.ts
src/shared/config/: features.ts
src/shared/types/: sync.ts
src/shared/utils/: import.ts
(+1 files in other folders)
