[package]
name = "prompt-vault"
version = "0.1.0"
description = "Your prompts, one keystroke away"
authors = ["Dylan Shade"]
license = "MIT"
repository = "https://github.com/dpshade/pocket-prompt-ui"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
